# thread-digest

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
prompts/: summarize.md
src/: config.py  main.py
src/ai/: __init__.py  api_client.py  prompts.py  summarizer.py
src/bot/: formatter.py  handlers.py  main.py  middleware.py
src/database/: manager.py  models.py
src/fetchers/: __init__.py  base.py  detector.py  reddit.py  x.py  x_models.py
src/utils/: logging.py
tests/: conftest.py  test_config.py
tests/fixtures/: reddit_big.json  reddit_small.json  x_thread_small.json
tests/test_ai/: __init__.py  test_prompts.py  test_summarizer.py
tests/test_bot/: test_handlers.py  test_middleware.py
tests/test_db/: test_manager.py
tests/test_fetchers/: test_detector.py  test_reddit.py  test_x.py  test_x_models.py
