[project]
name = 'thread-digest'
version = '0.1.0'
description = 'Telegram bot that summarizes Reddit threads via AI (DeepSeek V3)'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    'aiogram>=3.14.0',
    'sqlalchemy>=2.0.34',
    'aiosqlite>=0.20.0',
    'pydantic>=2.9.2',
    'pydantic-settings>=2.6.0',
    'python-dotenv>=1.0.1',
    'loguru>=0.7.2',
    'openai>=1.54.1,<3',
    'httpx>=0.27.0',
    'aiolimiter>=1.1.0',
    'typing-extensions>=4.12.2',
    'greenlet>=3.2.3',
]

[dependency-groups]
dev = [
    'pytest>=8.3.3',
    'pytest-asyncio>=0.24.0',
    'pytest-cov>=6.0.0',
    'pytest-httpx>=0.30.0',
    'mypy>=1.16.1',
    'ruff>=0.12.2',
    'bandit>=1.8.6',
]


[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src']

# ===== MYPY =====
[tool.mypy]
python_version = '3.12'
disallow_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = false
strict_optional = false
plugins = ['sqlalchemy.ext.mypy.plugin']

exclude = [
    '.venv/',
    '.git/',
    '__pycache__/',
    '.mypy_cache/',
    'tests/',
]

[[tool.mypy.overrides]]
module = 'aiogram.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'loguru.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'openai.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'aiolimiter.*'
ignore_missing_imports = true

# ===== RUFF =====
[tool.ruff]
line-length = 79
target-version = 'py312'

exclude = [
    '.git',
    '.mypy_cache',
    '.ruff_cache',
    '.venv',
    '__pycache__',
    'scripts',
]

[tool.ruff.lint]
select = [
    'E4',   # pycodestyle: import errors
    'E7',   # pycodestyle: statement errors
    'E9',   # pycodestyle: runtime errors
    'W6',   # pycodestyle: deprecated warnings
    'F',    # pyflakes
    'I',    # isort
    'C90',  # mccabe complexity
    'N',    # pep8-naming
    'UP',   # pyupgrade
    'S',    # bandit security
    'B',    # flake8-bugbear
    'A',    # flake8-builtins
    'C4',   # flake8-comprehensions
    'PIE',  # flake8-pie
    'SIM',  # flake8-simplify
    'PL',   # pylint
]

ignore = [
    'E501',    # line too long (handled by formatter)
    'PLR2004', # magic-value-comparison
    'S311',    # pseudorandom generators (ok for backoff jitter)
    'PLW0603', # global statement (ok for singleton pattern)
]

[tool.ruff.lint.per-file-ignores]
'tests/**' = ['S101']
'conftest.py' = ['S101']

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
skip-magic-trailing-comma = false
docstring-code-format = true

# ===== BANDIT =====
[tool.bandit]
exclude_dirs = [
    '.venv',
    'venv',
    '.git',
    '__pycache__',
    '.mypy_cache',
    '.ruff_cache',
    'tests',
]

skips = [
    'B101',  # assert_used: ok в тестах
    'B108',  # hardcoded_tmp_directory
    'B113',  # request_without_timeout: httpx имеет свои таймауты
]

# ===== PYTEST =====
[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'function'
testpaths = ['tests']
python_files = ['test_*.py', '*_test.py']
python_classes = ['Test*']
python_functions = ['test_*']
addopts = '--cov=src --cov-report=term-missing'
markers = [
    'slow: marks tests as slow (integration tests with real API calls)',
    'integration: marks tests as integration tests',
]
